[gd_scene load_steps=10 format=2]

[ext_resource path="res://addons/PracticeTester/ui/icons/chevron.png" type="Texture" id=1]
[ext_resource path="res://addons/PracticeTester/editor_ui/Revealer.gd" type="Script" id=2]
[ext_resource path="res://addons/PracticeTester/ui/theme/fonts/font_button_small.tres" type="DynamicFont" id=7]

[sub_resource type="StyleBoxEmpty" id=1]

[sub_resource type="StyleBoxEmpty" id=3]

[sub_resource type="StyleBoxEmpty" id=4]

[sub_resource type="StyleBoxEmpty" id=2]

[sub_resource type="StyleBoxEmpty" id=5]

[sub_resource type="StyleBoxEmpty" id=6]

[node name="Revealer" type="Container"]
margin_right = 136.0
margin_bottom = 46.0
rect_clip_content = true
script = ExtResource( 2 )
__meta__ = {
"_editor_description_": "Revealer specific to this project as it adds a checkmark icon"
}

[node name="Tween" type="Tween" parent="."]

[node name="ToggleBar" type="PanelContainer" parent="."]
modulate = Color( 1, 1, 1, 0.65 )
margin_right = 136.0
margin_bottom = 24.0
rect_min_size = Vector2( 120, 0 )
size_flags_horizontal = 3
custom_styles/panel = SubResource( 1 )

[node name="ToggleCapturer" type="Button" parent="ToggleBar"]
margin_right = 136.0
margin_bottom = 24.0
mouse_default_cursor_shape = 2
size_flags_horizontal = 3
custom_fonts/font = ExtResource( 7 )
custom_styles/hover = SubResource( 3 )
custom_styles/pressed = SubResource( 4 )
custom_styles/focus = SubResource( 2 )
custom_styles/disabled = SubResource( 5 )
custom_styles/normal = SubResource( 6 )
toggle_mode = true
flat = true
align = 0

[node name="BarLayout" type="HBoxContainer" parent="ToggleBar"]
margin_right = 136.0
margin_bottom = 24.0
mouse_filter = 2

[node name="Label" type="Label" parent="ToggleBar/BarLayout"]
margin_top = 5.0
margin_right = 110.0
margin_bottom = 19.0
size_flags_horizontal = 3
custom_colors/font_color = Color( 1, 1, 1, 1 )
text = "Expand"
valign = 1
autowrap = true

[node name="ToggleIcon" type="Control" parent="ToggleBar/BarLayout"]
margin_left = 114.0
margin_right = 136.0
margin_bottom = 24.0
rect_min_size = Vector2( 22, 24 )
mouse_filter = 2
size_flags_vertical = 4

[node name="Texture" type="TextureRect" parent="ToggleBar/BarLayout/ToggleIcon"]
anchor_left = 1.0
anchor_right = 1.0
anchor_bottom = 1.0
margin_left = -22.0
grow_horizontal = 0
grow_vertical = 0
rect_pivot_offset = Vector2( 11, 12 )
mouse_filter = 2
size_flags_horizontal = 8
texture = ExtResource( 1 )
stretch_mode = 6
